# exercism

./: .gitignore  Exercism.sln  README.md
bash/: test-all.sh
python/: README.md  pyproject.toml
python/armstrong-numbers/: armstrong_numbers.py
python/black-jack/: black_jack.py
python/bob/: bob.py
python/card-games/: lists.py
python/cater-waiter/: sets.py
python/chaitanas-colossal-coaster/: list_methods.py
python/collatz-conjecture/: collatz_conjecture.py
python/currency-exchange/: exchange.py
python/difference-of-squares/: difference_of_squares.py
python/diffie-hellman/: diffie_hellman.py
python/dnd-character/: dnd_character.py
python/ellens-alien-game/: classes.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/grains/: grains.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/hamming/: hamming.py
python/hangman/: hangman.py
python/high-scores/: high_scores.py
python/inventory-management/: dicts.py
python/isbn-verifier/: isbn_verifier.py
python/isogram/: isogram.py
python/leap/: leap.py
python/little-sisters-vocab/: strings.py
python/locomotive-engineer/: locomotive_engineer.py
python/making-the-grade/: loops.py
python/matrix/: matrix.py
python/meltdown-mitigation/: conditionals.py
python/palindrome-products/: palindrome_products.py
python/pangram/: pangram.py
python/perfect-numbers/: perfect_numbers.py
python/protein-translation/: protein_translation.py
python/raindrops/: raindrops.py
python/rational-numbers/: rational_numbers.py
python/robot-name/: robot_name.py
python/series/: series.py
(+1206 files in other folders)
